tests/snapshots/transactions__CborDB-Transaction Storage transaction initialized.snap
---
source: tests/transactions.rs
expression: "tx.try_read_storage::<Vec<TestRecord>>(&db_file_path)?"
---
[]
