tests/snapshots/transactions__CborDB-Transaction transaction inserted.snap
---
source: tests/transactions.rs
expression: "tx.get_all::<TestRecordPartitioned>()?"
---
[
    TestRecordPartitioned {
        id: 1,
        data: "My data of 1",
    },
]
