tests/snapshots/transactions__JsonDB Storage rolled back.snap
---
source: tests/transactions.rs
expression: "db.try_read_storage::<Vec<TestRecord>>(&db_file_path)?"
---
[]
