tests/snapshots/transactions__cbor-DashMapDB Single Storage commited.snap
---
source: tests/transactions.rs
expression: "db.try_read_storage::<TestRecord>(&db_file_path)?"
---
TestRecord {
    id: 1,
    data: "Modified the data",
}
