tests/snapshots/transactions__json-DiskDB Storage commited.snap
---
source: tests/transactions.rs
expression: "db.try_read_storage::<Vec<TestRecord>>(&db_file_path)?"
---
[
    TestRecord {
        id: 1,
        data: "My data of 1",
    },
    TestRecord {
        id: 2,
        data: "My data of 2",
    },
]
