tests/snapshots/transactions__json-TransactionDB Single Storage transaction backup.snap
---
source: tests/transactions.rs
expression: "tx.try_read_storage::<TestRecord>(backup_path)?"
---
TestRecord {
    id: 1,
    data: "Modified the data",
}
