tests/snapshots/transactions__json-TransactionDB Single Storage transaction reinitialized.snap
---
source: tests/transactions.rs
expression: "tx.try_read_storage::<TestRecord>(&tx_file_path)?"
---
TestRecord {
    id: 1,
    data: "Modified the data",
}
