tests/snapshots/transactions__json-TransactionDB Storage transaction read before.snap
---
source: tests/transactions.rs
expression: "tx.try_read_storage_before::<Vec<TestRecord>>(&tx_file_path)?"
---
[]
