tests/snapshots/transactions__json-TransactionDB transaction inserted all.snap
---
source: tests/transactions.rs
expression: "tx.get_all::<TestRecordPartitioned>()?"
---
[
    TestRecordPartitioned {
        id: 1,
        data: "My data of 1",
    },
    TestRecordPartitioned {
        id: 2,
        data: "My data of 2",
    },
    TestRecordPartitioned {
        id: 3,
        data: "My data of 3",
    },
]
